syntax="proto3";

package com.chatnow.core.domain.protobuf.command;

message HeartBeatCommand{
    sint32 type=1;
}


message HeartBeatCommandResp{
    sint32 type=1;
}
